Fix Bug for detail addon